[package]
name = "librypt-totp"
version = "0.1.0"
edition = "2021"

[dependencies]
librypt-hash = { version = "0.1", git = "https://www.github.com/librypt/librypt-hash" }
librypt-hotp = { version = "0.1", git = "https://www.github.com/librypt/librypt-hotp" }

[dev-dependencies]
librypt-hash-sha1 = { version = "0.1", git = "https://www.github.com/librypt/librypt-hash-sha1" }
